<resources>
    <string name="app_name">Habits</string>
    <string name="add_name">+</string>
    <string name="add_title">Add Habit</string>
    <string name="save_habit">Create</string>
    <string name="name_of_habit">Habit Name</string>
    <string name="description_of_habit">Description</string>
    <string name="frequency_of_habit">Frequency per\u0020</string>
    <string name="edit_description">Edit</string>
    <string name="delete_habit">Delete</string>
    <string name="divide">\u0020times /\u0020</string>
    <string name="set_reminder">Reminder\u0020</string>
    <string name="time_reminder">12:00 AM</string>
    <string name="confirmation_text">Are you sure you want to delete this habit?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="reminder_question">When would you like reminders?</string>


    <string-array name="frequency_spinner_array">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>


    <string-array name="month_spinner_array">
        <item>all time</item>
        <item>week</item>
        <item>month</item>
        <item>quarter</item>
        <item>half-year</item>
        <item>year</item>
    </string-array>

</resources>